--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,8 +44,24 @@
     ]
   },
   "devDependencies": {
+    "@solana/web3.js": "^1.95.4",
+    "assert": "^2.1.0",
     "autoprefixer": "^10.4.20",
+    "bip39": "^3.1.0",
+    "bs58": "^6.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "ed25519-hd-key": "^1.3.0",
+    "https-browserify": "^1.0.0",
+    "node-polyfill-webpack-plugin": "^4.0.0",
+    "os-browserify": "^0.3.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3.4.14",
+    "tweetnacl": "^1.0.3",
+    "url": "^0.11.4"
   }
 }
